@@ -120,6 +120,7 @@ Release 0.91.0 - Unreleased
    HBASE-3976  Disable block cache on compactions (Karthik Sankarachary)
    HBASE-3979  Trivial fixes in code, document (Ming Ma)
    HBASE-3794  Ability to Discard Bad HTable Puts
+   HBASE-3923  HBASE-1502 Broke Shell's status 'simple' and 'detailed'
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
